# linkedin-prospector

./: .gitignore  README.md  TODO.md  config.toml  prek.toml  pyproject.toml
config/: config.toml
config/templates/: first_message.txt.j2  follow_up.txt.j2
examples/: prospects.csv
src/: browser.py  config.py  csv_importer.py  database.py  main.py  models.py  templates.py  workflow.py
src/linkedin/: auth.py  connection.py  conversation.py  messenger.py  navigator.py  profile_parser.py  sync.py
src/safety/: human_behavior.py  rate_limiter.py
