[project]
name = "automatisation-prospections"
version = "0.1.0"
description = "Automatisation de prospection LinkedIn pour recruteurs IT/Data"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "structlog>=25.5.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
    "prek>=0.3.8",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[project.scripts]
prospect = "src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
    "S",     # flake8-bandit (security)
    "ASYNC", # flake8-async
]
ignore = [
    "S101",  # assert OK in tests
    "S311",  # random OK for human behavior simulation, not crypto
    "S608",  # dynamic SQL uses hardcoded column names, not user input
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ty.environment]
python-version = "3.14"

[tool.bandit]
targets = ["src"]
skips = ["B101", "B311", "B608", "B701"]
